<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone Services</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="onHold">On hold</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">USSD message must be between <xliff:g id="min_len" >%d</xliff:g> and <xliff:g id="max_len" >%d</xliff:g> characters. Please try again.</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="ok">OK</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="voice_number_setting_primary_user_only">Voicemail Settings can only be modified by the Primary User.</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="PERSOSUBSTATE_SIM_NETWORK_ENTRY">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="PERSOSUBSTATE_SIM_NETWORK_IN_PROGRESS">Requesting SIM network unlock\u2026</string>
    <string name="PERSOSUBSTATE_SIM_NETWORK_ERROR">SIM Network unlock request unsuccessful.</string>
    <string name="PERSOSUBSTATE_SIM_NETWORK_SUCCESS">SIM Network unlock successful.</string>
    <string name="mobile_network_settings_not_available">Mobile network settings are not available for this user</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelGsmMore_with_label">GSM call settings (<xliff:g id="subscriptionlabel" example="T-Mobile">%s</xliff:g>)</string>
    <string name="labelCFType">Call Forward Setting</string>
    <string name="labelCFVoice">Voice</string>
    <string name="labelCFVideo">Video</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="labelCdmaMore_with_label">CDMA call settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="phone_accounts">Calling accounts</string>
    <string name="phone_accounts_make_calls_with">Make calls with</string>
    <string name="phone_accounts_make_sip_calls_with">Make SIP calls with</string>
    <string name="phone_accounts_ask_every_time">Ask first</string>
    <string name="phone_accounts_default_account_label">No network available</string>
    <string name="phone_accounts_settings_header">Settings</string>
    <string name="phone_accounts_choose_accounts">Choose accounts</string>
    <string name="phone_accounts_selection_header">Phone accounts</string>
    <string name="phone_accounts_add_sip_account">Add SIP account</string>
    <string name="phone_accounts_configure_account_settings">Configure account settings</string>
    <string name="phone_accounts_all_calling_accounts">All calling accounts</string>
    <string name="phone_accounts_all_calling_accounts_summary">Select which accounts can make calls</string>
    <string name="wifi_calling">Wi-Fi calling</string>
    <string name="connection_service_default_label">Built-in connection service</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_settings_with_label">Voicemail (<xliff:g id="subscriptionlabel" example="Mock Carrier">%s</xliff:g>)</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="voicemail_notifications_key" translatable="false">voicemail_notification_key</string>
    <string name="voicemail_notifications_preference_title">Notifications</string>
    <string name="cell_broadcast_settings">Emergency broadcasts</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="additional_gsm_call_settings_with_label">Additional settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="call_forwarding_settings_with_label">Call forwarding settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Off</string>
    <string name="set_time_period">Set time period</string>
    <string name="all_day">\u0020All day\u0020</string>
    <string name="time_interval_char">: </string>
    <string name="time_start">\u0020From\u0020</string>
    <string name="time_start_hour">time start hour</string>
    <string name="time_start_minute">time start minute</string>
    <string name="time_end">\u0020To\u0020</string>
    <string name="time_next_day">\u0020next day\u0020</string>
    <string name="time_end_hour">time end hour</string>
    <string name="time_end_minute">time end minute</string>
    <string name="time_formate_am">AM</string>
    <string name="time_formate_pm">PM</string>
    <string name="cf_setting_mobile_data_alert">Please turn on mobile data and make sure that WLAN is off</string>
    <string name="cf_setting_mobile_data_roaming_alert">Please turn on data roaming</string>
    <string name="labelCFB">When busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Off</string>
    <string name="disable_cfb_forbidden">Your operator doesn\'t support disabling call forwarding when your phone is busy.</string>
    <string name="labelCFNRy">When unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Off</string>
    <string name="disable_cfnry_forbidden">Your operator doesn\'t support disabling call forwarding when your phone doesn\'t answer.</string>
    <string name="labelCFNRc">When unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Off</string>
    <string name="disable_cfnrc_forbidden">Your carrier doesn\'t support disabling call forwarding when your phone is unreachable.</string>
    <string name="updating_title">Call settings</string>
    <string name="call_settings_admin_user_only">Call settings can only be changed by the admin user.</string>
    <string name="call_settings_with_label">Settings (<xliff:g id="subscriptionlabel" example="Mock Carrier">%s</xliff:g>)</string>
    <string name="error_updating_title">Call settings error</string>
    <string name="reading_settings">Reading settings\u2026</string>
    <string name="updating_settings">Updating settings\u2026</string>
    <string name="reverting_settings">Reverting settings\u2026</string>
    <string name="response_error">Unexpected response from network.</string>
    <string name="exception_error">Network or SIM card error.</string>
    <string name="stk_cc_ss_to_dial_error">SS request modified to DIAL request.</string>
    <string name="stk_cc_ss_to_ussd_error">SS request modified to USSD request.</string>
    <string name="stk_cc_ss_to_ss_error">SS request modified to new SS request.</string>
    <string name="stk_cc_ss_to_dial_video_error">SS request modified to Video DIAL request.</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Preferred network type</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network type</string>
    <string name="call_category">Calling</string>
    <string name="enhanced_4g_lte_mode_title">Enhanced 4G LTE Mode</string>
    <string name="enhanced_4g_lte_mode_summary">Use LTE services to improve voice and other communications (recommended)</string>
    <string name="roaming">Roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="data_usage_title">Data usage</string>
    <string name="carrier_settings_euicc">Carrier</string>
    <string name="mobile_data_settings_title">Mobile data</string>
    <string name="mobile_data_settings_summary">Access data using mobile network</string>
    <string name="wifi_calling_settings_title">Wi-Fi calling</string>
    <string name="video_calling_settings_title">Carrier video calling</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="general_settings">General Settings</string>
    <string name="sim_card_info">Sim card information</string>
    <string name="default_cart_settings">Default card Settings</string>
    <string name="sim_toolkit">SIM Toolkit</string>
    <string name="default_cart_settings_dial">Dial</string>
    <string name="default_cart_settings_internet">Internet</string>
    <string name="network_type_select">Network type selection</string>
    <string name="automatic_operator_select">Automatic operator selection</string>
</resources>